• Uproszczono algorytm znajdujący najwyższy wynik/i po skończonej grze. Zmniejszono również ilość danych dotyczącej zwycięzcy/ów wysyłanych z serwera do klientów oraz liczbę operacji wykonywanych po otrzymaniu tych danych. • Alert informujący o wygranej (<DoubleButtonAlert />): o Wyświetla się poprawnie. Poprawiono stylizowanie. o Dodano zewnętrzny div, który blokuje możliwość kliknięcia czegokolwiek. • Rodzaj pozycji wszystkich alertów zmieniono na fixed – podążają za użytkownik wraz ze scrollowaniem strony. • Dodano obsługę przycisku ‘Wyjdź’ po zakończonej grze. Wykorzystuje history.replace, aby nie dało się wrócić do rozgrywki, bo może ona nie istnieć. • Gdy użytkownik wchodzi do gry, to do obiektu socket dopisywany jest username użytkownika, na podstawie którego określane jest kto wyszedł z aplikacji poprzez zamknięcie karty/okna przeglądarki. • Dodano socket disconnecting. Jest to zarezerwowany event, odpalany przed disconnect, gdy użytkownik wychodzi z apliacji (zamknięcie taba, okna). Wciąż zawiera informacje o danym sockecie. Przy jego wywołaniu sprawdzane jest czy użytkownik, który właśnie rozłączył się z aplikacją należał do jakiegoś stołu. Jeśli tak, to emitowany jest socket userLeft, który u klienta sprawdza czy użytkownik siedział przy stole, a jeśli siedział to emitowany jest socket getUp. • Dodano socket leaveBoard, który aktywuje się przy wyjściu z gry (nie dotyczy zamknięcia karty/okna przeglądarki). Wypisuje w konsoli kto wyszedł od którego stołu, wypisuje użytkownika z pokoju (żeby nie był w  kilku jednocześnie), a jeśli siedział on przy stole, to emitowany jest odpowiedni ping, który aktualizuję listę graczy przy stole. • Bugi: o Przy wyświetlaniu się  formularza logowania/rejestracji na stronie głównej, czcionka w kafelku z gry była idealnie biała/niezasłonięta prze diva formularza. Poprawiono z-index formularza na 2 (font na kafelkach ma z-index 1, co jest związana ze subtelną animacją powiększania zawartości kafelka).

--- a/client/src/css/alert.module.css
+++ b/client/src/css/alert.module.css
@@ -1,5 +1,17 @@
-﻿.divAlert {
-    position: absolute;
+﻿.divFixed {
+    position: fixed; /* Sit on top of the page content */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0); /* Black background with opacity */
+    z-index: 2;
+}
+
+.divAlert {
+    position: fixed;
     top: 40%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -42,6 +54,10 @@
 .button:hover {
     background-color: #3abd41;
     cursor: pointer;
+}
+
+.divAlert div {
+    text-align:center;
 }
 
 .button1 {
