--- a/client/src/css/form.module.css
+++ b/client/src/css/form.module.css
@@ -7,7 +7,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 1;
+    z-index: 2;
 }
 
 .divForm {
